@@ -44,7 +44,9 @@ RUNSMTPSERVER=TRUE
 # SMTPSERVERNAME defines the name of the smtp server to use when sending out-going
 # emails.  If blank, the system will attempt to connect to the mail server denoted
 # by the email addresses directly.  Otherwise, the given server will be used as 
-# a relay server.
+# a relay server.  If you want to implement SMTP authentication, you can include
+# a comma followed by either LOGIN or PLAIN, followed by the user name, followed
+# by the password.
 SMTPSERVERNAME=
 
 # CHARSETINPUT is the name of the Java Character set to use for the default 
@@ -1210,7 +1212,7 @@ DISABLE=
 #    DBROOMS, CMROIT, CMROEX, CMROCH, CMROOM, CMAREA, CMSTAT, HTTPREQ
 #    SMTPCLIENT, AUTOPURGE, CONQUEST, ARREST, TELNET, CLASSLOADER, VACUUM,
 #    DBROOMPOP, POLLCACHE, SAVETHREAD, UTLITHREAD, PROPERTY, MISSINGKIDS,
-#    CATALOGTHREAD, CATALOGCACHE, OUTPUT, HTTPACCESS
+#    CATALOGTHREAD, CATALOGCACHE, OUTPUT, HTTPACCESS, SMTPCLIENT
 DEBUG=
 
 # NOCACHE is a list, seperated by commas, of which internal
