@@ -241,7 +241,7 @@ public class MUD extends Thread implements MudHost
 		{
 			smtpServerThread = new SMTPserver(CMLib.mud(0));
 			smtpServerThread.start();
-			CMLib.threads().startTickDown(smtpServerThread,Tickable.TICKID_EMAIL,60);
+			CMLib.threads().startTickDown(smtpServerThread,Tickable.TICKID_EMAIL,3);
 		}
 
 		CMProps.setUpLowVar(CMProps.SYSTEM_MUDSTATUS,"Booting: loading base classes");
