@@ -706,7 +706,7 @@ public class CMProps extends Properties
         setVar(SYSTEM_CLANTROPEXP,getStr("CLANTROPEXP"));
         setVar(SYSTEM_CLANTROPPK,getStr("CLANTROPPK"));
         setVar(SYSTEM_COLORSCHEME,getStr("COLORSCHEME"));
-        setVar(SYSTEM_SMTPSERVERNAME,getStr("SMTPSERVERNAME"));
+        setUpLowVar(SYSTEM_SMTPSERVERNAME,getStr("SMTPSERVERNAME"));
         setVar(SYSTEM_EXPCONTACTLINE,getStr("EXPCONTACTLINE"));
         setVar(SYSTEM_AUTOWEATHERPARMS,getStr("AUTOWEATHERPARMS"));
         setVar(SYSTEM_DEFAULTPLAYERFLAGS,getStr("DEFAULTPLAYERFLAGS"));
