@@ -2198,4 +2198,5 @@ Special/Reserved Quest called holidays can be added to/modified on an area-by-ar
    Use RESET MOBSTATS WORLD command to pull your mobs into compliance.  This will, as a side affect, reset all area content to db baseline. 
 4. CoffeeMud now supports critical hits for spells and physical damage: high int supports former, and high dex the later.
 5. New Zappermask: +BASECLASS
-6. New DEBUG flag: HTTPACCESS (yes, we can finally have a web access log now!)
+6. New DEBUG flag: HTTPACCESS, SMTPCLIENT
+7. SMTPSERVERNAME ini entry expanded to allow SMTP auth support.
